force-app/main/default/objects/AssignedExpectedDocument__c/AssignedExpectedDocument__c.object-meta.xml
<CustomObject>
    <description>Liste des documents attendus pour une commande client</description>
    <label>Document attendu d&apos;une commande</label>
    <nameField>
        <displayFormat>DA/{YYYY}/{00000}</displayFormat>
        <label>Référence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents attendus d&apos;une commande</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>