force-app/main/default/objects/AssignedExpectedDocument__c/fields/customerOrder__c.field-meta.xml
<CustomField>
    <fullName>customerOrder__c</fullName>
    <label>Commande client</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Documents attendus d&apos;une commande</relationshipLabel>
    <relationshipName>AssignedExpectedDocuments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>