force-app/main/default/objects/AssignedExpectedDocument__c/fields/expectedDate__c.field-meta.xml
<CustomField>
    <fullName>expectedDate__c</fullName>
    <defaultValue>TODAY()+2</defaultValue>
    <description>Date prévisionnelle de réception du document</description>
    <label>Date prévisionnelle</label>
    <required>true</required>
    <type>Date</type>
</CustomField>