force-app/main/default/objects/AssignedExpectedDocument__c/fields/expectedDocument__c.field-meta.xml
<CustomField>
    <fullName>expectedDocument__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Document attendu pour le contrat</description>
    <label>Document attendu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>ExpectedDocument</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Documents attendus d&apos;une commande (Document attendu)</relationshipLabel>
    <relationshipName>AssignedExpectedDocuments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>