force-app/main/default/objects/AssignedExpectedDocument__c/fields/orderNonCompliance__c.field-meta.xml
<CustomField>
    <fullName>orderNonCompliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de non-conformité commande</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Type de non-conformité commande</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Documents attendus d&apos;une commande (Référentiel)</relationshipLabel>
    <relationshipName>Documents_attendus_d_une_commande</relationshipName>
    <type>Lookup</type>
</CustomField>