force-app/main/default/objects/AssignedExpectedDocument__c/fields/receptionDate__c.field-meta.xml
<CustomField>
    <fullName>receptionDate__c</fullName>
    <description>Date de réception du document par KparK</description>
    <label>Date de réception</label>
    <type>Date</type>
</CustomField>